foundation-objs/main/default/objects/Project__c/fields/Account_Owner_CSM__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_CSM__c</fullName>
    <label>Account Owner - CSM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>