foundation-objs/main/default/objects/Project__c/fields/Ageing_Since_UAT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ageing_Since_UAT_End_Date__c</fullName>
    <formula>If(((TODAY() -  UAT_End_Date__c))&lt;= 15,&quot;0 - 15 Days&quot;,IF(AND(((TODAY() - UAT_End_Date__c) &gt; 15 ), ((TODAY() - UAT_End_Date__c) &lt;=30)),&quot;16 - 30 Days&quot; ,IF(AND(((TODAY() - UAT_End_Date__c) &gt;30) , ((TODAY() - UAT_End_Date__c) &lt;=60)), &quot;31 - 60 Days&quot; ,IF(AND(((TODAY() - UAT_End_Date__c) &gt; 60) , ((TODAY() - UAT_End_Date__c) &lt;= 90)) ,&quot;60 - 90 Days&quot; , IF(ISBLANK(UAT_End_Date__c),&quot; &quot;,&quot;Greater than 90 Days&quot;)))))</formula>
    <label>Ageing (Since UAT End Date)</label>
    <type>Text</type>
</CustomField>