foundation-objs/main/default/objects/Project__c/fields/AMC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AMC_End_Date__c</fullName>
    <label>AMC End Date</label>
    <type>Date</type>
</CustomField>