foundation-objs/main/default/objects/Project__c/fields/AMC_ERP_Name__c.field-meta.xml
<CustomField>
    <fullName>AMC_ERP_Name__c</fullName>
    <formula>TEXT(Parent_Project__r.Client_ERP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC ERP Name</label>
    <type>Text</type>
</CustomField>