foundation-objs/main/default/objects/Project__c/fields/AMC_Mode_of_Integration__c.field-meta.xml
<CustomField>
    <fullName>AMC_Mode_of_Integration__c</fullName>
    <formula>TEXT(Parent_Project__r.Mode_of_Integration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC Mode of Integration</label>
    <type>Text</type>
</CustomField>