foundation-objs/main/default/objects/Project__c/fields/AMC_Product__c.field-meta.xml
<CustomField>
    <fullName>AMC_Product__c</fullName>
    <formula>TEXT(Parent_Project__r.Product__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC Product</label>
    <type>Text</type>
</CustomField>