foundation-objs/main/default/objects/Project__c/fields/AMC_Project_Updates__c.field-meta.xml
<CustomField>
    <fullName>AMC_Project_Updates__c</fullName>
    <label>AMC Project Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>