foundation-objs/main/default/objects/Project__c/fields/AMC_Scope_Category__c.field-meta.xml
<CustomField>
    <fullName>AMC_Scope_Category__c</fullName>
    <formula>TEXT(Parent_Project__r.Scope_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC Scope Category</label>
    <type>Text</type>
</CustomField>