foundation-objs/main/default/objects/Project__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <label>Asset ID</label>
    <length>45</length>
    <type>Text</type>
</CustomField>