foundation-objs/main/default/objects/Project__c/fields/Awaiting_Kick_off_Status__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Kick_off_Status__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Project_Stage__c ,&apos;&apos;)),
IF(NOT(ISBLANK(Project_Kick_off_Date__c)), iF(Project_Kick_off_Date__c &gt;  Benchmark_Date_Awaiting_Kick_off__c ,
&quot;RED&quot;,
&quot;GREEN&quot;),
IF(TODAY() &gt; Benchmark_Date_Awaiting_Kick_off__c,
&quot;RED&quot;,&quot;GREEN&quot;
)),&apos;NA&apos;)</formula>
    <label>Awaiting Kick-off Status</label>
    <type>Text</type>
</CustomField>