foundation-objs/main/default/objects/Project__c/fields/Benchmark_Date_Awaiting_Kick_off__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Date_Awaiting_Kick_off__c</fullName>
    <formula>IF(ISPICKVAL(Product__c,&apos;KSA EINV I&apos;) || ISPICKVAL(Product__c,&apos;KSA_EINV_II&apos;),
LOE_Received_Date__c+10,
LOE_Received_Date__c+3)</formula>
    <label>Awaiting Kick-off KPI Date</label>
    <type>Date</type>
</CustomField>