foundation-objs/main/default/objects/Project__c/fields/Benchmark_Date_Live__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Date_Live__c</fullName>
    <formula>IF(ISPICKVAL(Product__c,&apos;ASP/GSP&apos;) || ISPICKVAL(Product__c,&apos;Invoice Discounting&apos;) || ISPICKVAL(Product__c,&apos;EINV&apos;) || ISPICKVAL(Product__c,&apos;EWB&apos;),
UAT_End_Date__c+7,
IF(ISPICKVAL(Product__c,&apos;Max ITC&apos;) || ISPICKVAL(Product__c,&apos;Clear Capture&apos;),
UAT_End_Date__c+10,
IF(ISPICKVAL(Product__c,&apos;KSA EINV I&apos;) || ISPICKVAL(Product__c,&apos;KSA_EINV_II&apos;),
UAT_End_Date__c+5,
UAT_End_Date__c+7)))</formula>
    <label>Live KPI Date</label>
    <type>Date</type>
</CustomField>