foundation-objs/main/default/objects/Project__c/fields/Benchmark_Date_Overall__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Date_Overall__c</fullName>
    <formula>IF(ISPICKVAL(Product__c,&apos;EINV&apos;) || ISPICKVAL(Product__c,&apos;EWB&apos;),
LOE_Received_Date__c+45,
IF(ISPICKVAL(Product__c,&apos;ASP/GSP&apos;) || ISPICKVAL(Product__c,&apos;Invoice Discounting&apos;),
LOE_Received_Date__c+60,
IF(ISPICKVAL(Product__c,&apos;Max ITC&apos;) || ISPICKVAL(Product__c,&apos;Clear Capture&apos;),
LOE_Received_Date__c+90,
IF(ISPICKVAL(Product__c,&apos;KSA EINV I&apos;) || ISPICKVAL(Product__c,&apos;KSA_EINV_II&apos;),
LOE_Received_Date__c+100,
LOE_Received_Date__c+45))))</formula>
    <label>Overall KPI Date</label>
    <type>Date</type>
</CustomField>