foundation-objs/main/default/objects/Project__c/fields/Benchmark_Date_Project_Plan__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Date_Project_Plan__c</fullName>
    <formula>IF(ISPICKVAL(Product__c,&apos;EINV&apos;) || ISPICKVAL(Product__c,&apos;EWB&apos;),
Project_Kick_off_Date__c+7,
IF(ISPICKVAL(Product__c,&apos;ASP/GSP&apos;) || ISPICKVAL(Product__c,&apos;Invoice Discounting&apos;),
Project_Kick_off_Date__c+15,
IF(ISPICKVAL(Product__c,&apos;Max ITC&apos;) || ISPICKVAL(Product__c,&apos;Clear Capture&apos;),
Project_Kick_off_Date__c+21,
IF(ISPICKVAL(Product__c,&apos;KSA EINV I&apos;) || ISPICKVAL(Product__c,&apos;KSA_EINV_II&apos;),
Project_Kick_off_Date__c+15,
Project_Kick_off_Date__c+7))))</formula>
    <label>Project Plan KPI Date</label>
    <type>Date</type>
</CustomField>