foundation-objs/main/default/objects/Project__c/fields/Benchmark_Date_UAT__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Date_UAT__c</fullName>
    <formula>IF(ISPICKVAL(Product__c,&apos;ASP/GSP&apos;) || ISPICKVAL(Product__c,&apos;Invoice Discounting&apos;) || ISPICKVAL(Product__c,&apos;EINV&apos;) || ISPICKVAL(Product__c,&apos;EWB&apos;),
Implementation_End_Date__c+14,
IF(ISPICKVAL(Product__c,&apos;Max ITC&apos;) || ISPICKVAL(Product__c,&apos;Clear Capture&apos;),
Implementation_End_Date__c+30,
Implementation_End_Date__c+14))</formula>
    <label>UAT KPI Date</label>
    <type>Date</type>
</CustomField>