foundation-objs/main/default/objects/Project__c/fields/Client_ERP_Family__c.field-meta.xml
<CustomField>
    <fullName>Client_ERP_Family__c</fullName>
    <label>Client ERP Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>