foundation-objs/main/default/objects/Project__c/fields/Client_SI_company_name_DMS_project__c.field-meta.xml
<CustomField>
    <fullName>Client_SI_company_name_DMS_project__c</fullName>
    <description>Client SI company legal name</description>
    <label>Client SI company name (DMS project)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>