foundation-objs/main/default/objects/Project__c/fields/Client_SI_contact_DMS_project_only__c.field-meta.xml
<CustomField>
    <fullName>Client_SI_contact_DMS_project_only__c</fullName>
    <description>Enter contact details in this field</description>
    <label>Client SI contact (DMS project only)</label>
    <type>Phone</type>
</CustomField>