foundation-objs/main/default/objects/Project__c/fields/CTX_SE__c.field-meta.xml
<CustomField>
    <fullName>CTX_SE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>