foundation-objs/main/default/objects/Project__c/fields/Current_phases__c.field-meta.xml
<CustomField>
    <fullName>Current_phases__c</fullName>
    <label>Current phases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>