foundation-objs/main/default/objects/Project__c/fields/Customer_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Owner__c</fullName>
    <label>Customer Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>