foundation-objs/main/default/objects/Project__c/fields/Dealer_Management_system__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Management_system__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Need to check this if this is a DMS project.</description>
    <label>Dealer Management system (DMS)</label>
    <type>Checkbox</type>
</CustomField>