foundation-objs/main/default/objects/Project__c/fields/Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Delivery_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>