foundation-objs/main/default/objects/Project__c/fields/Dev_to_Quality_Movement_Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Dev_to_Quality_Movement_Actual_Date__c</fullName>
    <label>Dev to Quality Movement : Actual Date</label>
    <type>Date</type>
</CustomField>