foundation-objs/main/default/objects/Project__c/fields/Developer_Confirmation_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Developer_Confirmation_completion_date__c</fullName>
    <label>Developer Confirmation completion date</label>
    <type>Date</type>
</CustomField>