foundation-objs/main/default/objects/Project__c/fields/Developer_Confirmation_due_date__c.field-meta.xml
<CustomField>
    <fullName>Developer_Confirmation_due_date__c</fullName>
    <label>Developer Confirmation due date</label>
    <type>Date</type>
</CustomField>