foundation-objs/main/default/objects/Project__c/fields/Development_of_Interfaces_Planned_date__c.field-meta.xml
<CustomField>
    <fullName>Development_of_Interfaces_Planned_date__c</fullName>
    <label>Development of Interfaces : Planned date</label>
    <type>Date</type>
</CustomField>