foundation-objs/main/default/objects/Project__c/fields/ERP_Network_due_date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Network_due_date__c</fullName>
    <label>ERP &amp; Network due date</label>
    <type>Date</type>
</CustomField>