foundation-objs/main/default/objects/Project__c/fields/ERP_Network_start_date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Network_start_date__c</fullName>
    <label>ERP &amp; Network start date</label>
    <type>Date</type>
</CustomField>