foundation-objs/main/default/objects/Project__c/fields/Estimated_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Go_Live_Date__c</fullName>
    <description>Date which is provided as Estimated Go Live Date as per the Project Plan.</description>
    <inlineHelpText>Date which is provided as Estimated Go Live Date as per the Project Plan.</inlineHelpText>
    <label>Estimated Go Live Date (Project plan)</label>
    <type>Date</type>
</CustomField>