foundation-objs/main/default/objects/Project__c/fields/Estimated_go_live_date_Current_status__c.field-meta.xml
<CustomField>
    <fullName>Estimated_go_live_date_Current_status__c</fullName>
    <description>Enter the estimated go-live date according to the current status. This will keep changing if there is a delay or change in status.</description>
    <inlineHelpText>Enter the estimated go-live date according to the current status. This will keep changing if there is a delay or change in status.</inlineHelpText>
    <label>Estimated Go Live Date (Rev)</label>
    <type>Date</type>
</CustomField>