foundation-objs/main/default/objects/Project__c/fields/Estimated_Implementation_End_Date_Rev__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Implementation_End_Date_Rev__c</fullName>
    <description>Enter the estimated implementation end date according to the current status. This will keep changing if there is a delay or change in status.</description>
    <inlineHelpText>Enter the estimated implementation end date according to the current status. This will keep changing if there is a delay or change in status.</inlineHelpText>
    <label>Estimated Implementation End Date (Rev)</label>
    <type>Date</type>
</CustomField>