foundation-objs/main/default/objects/Project__c/fields/Estimated_Onboarding_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Onboarding_completion_date__c</fullName>
    <label>Estimated Onboarding completion date</label>
    <type>Date</type>
</CustomField>