foundation-objs/main/default/objects/Project__c/fields/Estimated_UAT_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_UAT_End_Date__c</fullName>
    <description>Date which is provided as Estimated UAT End Date as per the Project Plan.</description>
    <inlineHelpText>Date which is provided as Estimated UAT End Date as per the Project Plan.</inlineHelpText>
    <label>Estimated UAT End Date</label>
    <type>Date</type>
</CustomField>