foundation-objs/main/default/objects/Project__c/fields/Go_Live_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Confirmation__c</fullName>
    <label>Go Live Confirmation</label>
    <type>Url</type>
</CustomField>