foundation-objs/main/default/objects/Project__c/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <description>Date on which the project actually went live.</description>
    <inlineHelpText>Date on which the project actually went live.</inlineHelpText>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>