foundation-objs/main/default/objects/Project__c/fields/Go_Live_LOE__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_LOE__c</fullName>
    <formula>Go_Live_Date__c -  LOE_Received_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days (B/w Go Live Date &amp; LOE Date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>