foundation-objs/main/default/objects/Project__c/fields/Go_live_start_date__c.field-meta.xml
<CustomField>
    <fullName>Go_live_start_date__c</fullName>
    <label>Go-live phase start date</label>
    <type>Date</type>
</CustomField>