foundation-objs/main/default/objects/Project__c/fields/ID_Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>ID_Project_Stage__c</fullName>
    <label>ID Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOW and Prerequisite</fullName>
            </value>
            <value>
                <fullName>Access to system</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>