foundation-objs/main/default/objects/Project__c/fields/Implementation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_End_Date__c</fullName>
    <description>Date on which project implementation was completed and submitted to the customer for UAT.</description>
    <inlineHelpText>Date on which project implementation was completed and submitted to the customer for UAT.</inlineHelpText>
    <label>Implementation End Date</label>
    <type>Date</type>
</CustomField>