foundation-objs/main/default/objects/Project__c/fields/Implementation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start_Date__c</fullName>
    <description>Date on which the implementation was started after the project plan.</description>
    <inlineHelpText>Date on which the implementation was started after the project plan.</inlineHelpText>
    <label>Implementation Start Date</label>
    <type>Date</type>
</CustomField>