foundation-objs/main/default/objects/Project__c/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <formula>IF((ISPICKVAL(Project_Stage__c,	&apos;Implementation&apos;) ||
    ISPICKVAL(Project_Stage__c,	&apos;UAT&apos;) ||
    ISPICKVAL(Project_Stage__c,	&apos;Live&apos;)),
IF(NOT(ISBLANK(Implementation_End_Date__c)), iF(Implementation_End_Date__c &gt;  Benchmark_Date_Implementation__c ,
&quot;RED&quot;,
&quot;GREEN&quot;),
IF(TODAY() &gt; Benchmark_Date_Implementation__c,
&quot;RED&quot;,
&quot;GREEN&quot;)),&apos;NA&apos;)</formula>
    <label>Implementation Status</label>
    <type>Text</type>
</CustomField>