foundation-objs/main/default/objects/Project__c/fields/In_house_project__c.field-meta.xml
<CustomField>
    <fullName>In_house_project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In case this project is in-house need to mandatorily check this field</description>
    <label>In-house project</label>
    <type>Checkbox</type>
</CustomField>