foundation-objs/main/default/objects/Project__c/fields/Initial_discussion_Actual_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_discussion_Actual_date__c</fullName>
    <label>Initial discussion : Actual date</label>
    <type>Date</type>
</CustomField>