foundation-objs/main/default/objects/Project__c/fields/Internal_Testing_Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Testing_Planned_Date__c</fullName>
    <label>Internal Testing : Planned Date</label>
    <type>Date</type>
</CustomField>