foundation-objs/main/default/objects/Project__c/fields/Is_Deemed_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Is_Deemed_Go_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>In case this project is moved to go live stage without the sign-off by the customer, then mark this as true.</description>
    <inlineHelpText>In case this project is moved to go live stage without the sign-off by the customer, then mark this as true.</inlineHelpText>
    <label>Consultation Expired</label>
    <type>Checkbox</type>
</CustomField>