foundation-objs/main/default/objects/Project__c/fields/Is_Parent_Project_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Project_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Parent Project Overridden?</label>
    <type>Checkbox</type>
</CustomField>