foundation-objs/main/default/objects/Project__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <label>Project Updates</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>