foundation-objs/main/default/objects/Project__c/fields/Issue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Issue_Owner__c</fullName>
    <description>Who needs to act to unblock the issue?</description>
    <inlineHelpText>Who needs to act to unblock the issue?</inlineHelpText>
    <label>Issue Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CT CSM</fullName>
            </value>
            <value>
                <fullName>CT Engg Dev</fullName>
            </value>
            <value>
                <fullName>CT Finance</fullName>
            </value>
            <value>
                <fullName>CT Integration</fullName>
            </value>
            <value>
                <fullName>CT Integration SI</fullName>
            </value>
            <value>
                <fullName>CT KAM</fullName>
            </value>
            <value>
                <fullName>CT Legal</fullName>
            </value>
            <value>
                <fullName>CT MS</fullName>
            </value>
            <value>
                <fullName>CT Product</fullName>
            </value>
            <value>
                <fullName>CT Sales EC</fullName>
            </value>
            <value>
                <fullName>CT Sales LC</fullName>
            </value>
            <value>
                <fullName>CT Sales VLC</fullName>
            </value>
            <value>
                <fullName>CT Sales Start Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>