foundation-objs/main/default/objects/Project__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client - Access Expiry</fullName>
            </value>
            <value>
                <fullName>Client - Connectivity</fullName>
            </value>
            <value>
                <fullName>Client - ERP Not Ready</fullName>
            </value>
            <value>
                <fullName>Client - Future Start Date</fullName>
            </value>
            <value>
                <fullName>Client - Kick-off Delay</fullName>
            </value>
            <value>
                <fullName>Client - Payment Pending</fullName>
            </value>
            <value>
                <fullName>Client - Prioritizing Another Project</fullName>
            </value>
            <value>
                <fullName>Client - Requirement Change</fullName>
            </value>
            <value>
                <fullName>Client - Requirements Confirmation</fullName>
            </value>
            <value>
                <fullName>Client - Turnover Less Than Threshold</fullName>
            </value>
            <value>
                <fullName>Client - UAT Delay</fullName>
            </value>
            <value>
                <fullName>Client - Unresponsive</fullName>
            </value>
            <value>
                <fullName>Client - User Provisioning</fullName>
            </value>
            <value>
                <fullName>CT - CSM Issue</fullName>
            </value>
            <value>
                <fullName>CT - Integration Issue</fullName>
            </value>
            <value>
                <fullName>CT - Kick-off Delay</fullName>
            </value>
            <value>
                <fullName>CT - Legal Issue</fullName>
            </value>
            <value>
                <fullName>CT - Onboarding Issue</fullName>
            </value>
            <value>
                <fullName>CT - Product Issue</fullName>
            </value>
            <value>
                <fullName>CT - Sales Issue</fullName>
            </value>
            <value>
                <fullName>CT - SI Delay</fullName>
            </value>
            <value>
                <fullName>CT - SI Payment Issue</fullName>
            </value>
            <value>
                <fullName>CT - SI PO Issue</fullName>
            </value>
            <value>
                <fullName>Client - Cutover Delay</fullName>
                <isActive>false</isActive>
                <label>Client - Cutover Delay</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>