foundation-objs/main/default/objects/Project__c/fields/Kick_Off_Deck__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Deck__c</fullName>
    <label>Kick Off Deck</label>
    <type>Url</type>
</CustomField>