foundation-objs/main/default/objects/Project__c/fields/Last_completed_phase__c.field-meta.xml
<CustomField>
    <fullName>Last_completed_phase__c</fullName>
    <label>Last completed phase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>